--- a/index.html
+++ b/index.html
@@ -30,22 +30,20 @@
     <section class="categoria">
         <h2>Filmes e séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=rL-r8iERvJw">
-                <img src="https://i.ytimg.com/vi/rL-r8iERvJw/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=WGadiLZfGFY">
-                <img src="https://img.youtube.com/vi/WGadiLZfGFY/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=mdHX3h9QCX8">
-                <img src="https://img.youtube.com/vi/mdHX3h9QCX8/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=wUVxEI0iDdU">
-                <img src="https://img.youtube.com/vi/wUVxEI0iDdU/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=vF2vxj8HZIk">
-                <img src="https://img.youtube.com/vi/vF2vxj8HZIk/maxresdefault.jpg" />
-            </a>
-        </div>
+            <a href="https://www.youtube.com/embed/xlDL-VsGVxU">
+                <img src="https://i1.ytimg.com/vi/xlDL-VsGVxU/default.jpg" />
+              </a>
+              <a href="https://www.youtube.com/embed/1fvRLE2YbEQ?si=OyJTN8sBKWyuYCp-">
+                <img src="https://i1.ytimg.com/vi/1fvRLE2YbEQ/default.jpg" />
+              </a>
+              <a href="https://www.youtube.com/embed/FYvf2sDLCsU?si=Sq9j6TU5rjnprfyv">
+                <img src="https://i1.ytimg.com/vi/FYvf2sDLCsU/default.jpg" />
+              </a>
+              <a href="https://www.youtube.com/embed/Vj2K83UM60k?si=BUVyLM2cjN-wJm4P">
+                <img src="https://i1.ytimg.com/vi/Vj2K83UM60k/default.jpg" />
+              </a>
+              <a href="https://www.youtube.com/embed/GaSxqWJxmIM?si=yLBsbMLyjdsOlKDD">
+                <img src="https://i1.ytimg.com/vi/GaSxqWJxmIM/default.jpg" />
     </section>
 
 </body>
