--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="pt-BR">
+<html lang="pt-BR"></html>
 
 <head>
     <link rel="stylesheet" href="styles.css">
@@ -7,20 +7,20 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
-    <title>CineminhaDoEduardo</title>
+    <title>Guiminamflix</title>
 </head>
 
 <body>
-    <header>CINEMINHADOEDUARDO</header>
+    <header>GUIMINAMFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
-            <h1>Absolute CGI</h1>
-            <p>#Absolute CGI</p>
+            <h1>ATRAVÉS DO ARANHAVERSO</h1>
+            <p>#homem-aranha</p>
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/G5kA39T8cUo"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=EEv-tsY_b1B2OwKE"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -44,6 +44,8 @@
               </a>
               <a href="https://www.youtube.com/embed/GaSxqWJxmIM?si=yLBsbMLyjdsOlKDD">
                 <img src="https://i1.ytimg.com/vi/GaSxqWJxmIM/default.jpg" />
+            </a>
+        </div>
     </section>
 
 </body>
